# aleph-solana-contract

./: Anchor.toml  README.md  package-lock.json
programs/aleph-solana-contract/: Cargo.toml
programs/aleph-solana-contract/src/: lib.rs
tests/: aleph-solana-contract.ts
tests/utils/: createFundedWallet.ts
